<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="add_attachment">Attach</string>
    <string name="add_music">Add songs</string>
    <string name="add_picture">Add pictures</string>
    <string name="add_slide">Add slides</string>
    <string name="add_slide_hint">Touch to create new slide.</string>
    <string name="add_subject">Add subject</string>
    <string name="add_video">Add video</string>
    <string name="adding_attachments_title">Adding attachment</string>
    <string name="app_label">Messages</string>
    <string name="attach_image">Photo</string>
    <string name="attach_record_sound">Record</string>
    <string name="attach_record_video">Capture video</string>
    <string name="attach_slideshow">Slide</string>
    <string name="attach_sound">Audio</string>
    <string name="attach_take_photo">Take photo</string>
    <string name="attach_video">Video</string>
    <string name="attachment_audio">Audio</string>
    <string name="attachment_picture">Image</string>
    <string name="attachment_slideshow">Slide</string>
    <string name="attachment_video">Video</string>
    <string name="bcc_label">BCC:</string>
    <string name="building_slideshow_title">Creating slide</string>
    <string name="cannot_add_picture_and_video">Unable to add videos and pictures to one single slide.</string>
    <string name="cannot_add_slide_anymore">Unable to add more slides.</string>
    <string name="cannot_get_details">Unable to get details.</string>
    <string name="cannot_save_message">Unable to save SMS.</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="change_duration_activity"></string>
    <string name="class_0_message_activity"></string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_conversation">Clear %1$s conversation</string>
    <string name="confirm_delete_locked_message">Delete this locked message?</string>
    <string name="confirm_delete_message">This message will be deleted.</string>
    <string name="confirm_dialog_title">Delete %1$s message</string>
    <string name="confirm_rate_limit">Multiple MMS will be sent. Are you sure?</string>
    <string name="copy_to_sdcard">Save attachment</string>
    <string name="copy_to_sdcard_fail">Unable to save attachment.</string>
    <string name="copy_to_sdcard_success">Attachment saved.</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Delete</string>
    <string name="delivered_label">Delivered:</string>
    <string name="delivery_header_title"></string>
    <string name="delivery_report_activity">Delivery report</string>
    <string name="delivery_toast_body">Received by %s</string>
    <string name="disable_notifications_dialog_message">Stop receiving duplicate SMS notifications from default Messaging app?</string>
    <string name="discard">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="discard_slideshow">Discard slide</string>
    <string name="done">Done</string>
    <string name="download_later">Unable to download right now. Retry later.</string>
    <string name="draft_separator">,</string>
    <string name="duration_not_a_number">Duration must be a number.</string>
    <string name="duration_sec">Duration (%s s)</string>
    <string name="duration_selector_title">Duration for slide</string>
    <string name="duration_zero">Duration must be greater than 0 second.</string>
    <string name="edit">Edit</string>
    <string name="edit_slide_activity"></string>
    <string name="edit_slideshow_activity">Edit slideshow</string>
    <string name="enumeration_comma">、</string>
    <string name="error_code_label">Error code:</string>
    <string name="error_state">States do not match</string>
    <string name="error_state_text">The states of threads and recipients do not match. Please capture screen for the error and report it to http://go/droidanizer</string>
    <string name="exceed_message_size_limitation">MMS attachments maximum only supports 298KB file</string>
    <string name="expire_on">Expiration time: %s</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="forward_prefix">Fwd:</string>
    <string name="from_label">From:</string>
    <string name="has_draft">Drafts</string>
    <string name="has_invalid_recipient">Invalid recipient</string>
    <string name="hidden_sender_address">Hidden sender address</string>
    <string name="invalid_destination">Invalid destination address.</string>
    <string name="invalid_recipient_message">Correct the recipient(s) or they won\'t receive the message.</string>
    <string name="kilobyte">KB</string>
    <string name="layout_bottom">Layout (bottom)</string>
    <string name="layout_selector_title">Slide layout</string>
    <string name="layout_top">Layout (top)</string>
    <string name="loading_conversations">Loading conversations.</string>
    <string name="menu_debug_dump"></string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_search">Search</string>
    <string name="message_class_label">Message category:</string>
    <string name="message_count_format"> %1$s</string>
    <string name="message_details_title">Message details</string>
    <string name="message_download_failed_title">Message not downloaded</string>
    <string name="message_failed_body">Touch to view message and retry.</string>
    <string name="message_saved_as_draft">Message saved as draft</string>
    <string name="message_send_failed_title">Messages not sent</string>
    <string name="message_send_read_report">Read report will be sent</string>
    <string name="message_size_label">Size</string>
    <string name="message_timestamp_format">%1$s - %2$s</string>
    <string name="message_too_big_for_video">Message too large to attach a video</string>
    <string name="message_type_label">Type:</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="move_down">Move down</string>
    <string name="move_up">Move up</string>
    <string name="multimedia_message">MMS</string>
    <string name="multimedia_notification">MMS notification</string>
    <string name="new_message">New Message</string>
    <string name="no">Cancel</string>
    <string name="no_conversations">No messages</string>
    <string name="notification_failed_multiple">%s SMS cannot be sent</string>
    <string name="notification_failed_multiple_title">Messages not sent</string>
    <string name="notification_separator"></string>
    <string name="open_keyboard_to_compose_message">Open keyboard to type message</string>
    <string name="pref_messages_to_save"></string>
    <string name="pref_sms_settings_title">Display</string>
    <string name="pref_summary_mms_auto_retrieval">Auto download messages</string>
    <string name="pref_summary_mms_read_reports">Request a read report for every message you send</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Auto download messages while roaming</string>
    <string name="pref_title_manage_sim_messages">SIM messages</string>
    <string name="pref_title_mms_auto_retrieval">Auto download MMS</string>
    <string name="pref_title_mms_group_mms">Mass message</string>
    <string name="pref_title_mms_read_reports">Mms read report</string>
    <string name="pref_title_mms_retrieval_during_roaming">Download MMS when roaming</string>
    <string name="pref_title_notification_enabled">Show preview in notifications</string>
    <string name="pref_title_sms_delivery_reports">Delivery report</string>
    <string name="preferences_title">Settings</string>
    <string name="preview">Preview</string>
    <string name="preview_slideshow">Preview</string>
    <string name="priority_high">High</string>
    <string name="priority_label">Priority:</string>
    <string name="priority_low">Low</string>
    <string name="priority_normal">Normal</string>
    <string name="rate_limit_surpassed">Confirm</string>
    <string name="received_label">Received:</string>
    <string name="recipient_label">Recipient:</string>
    <string name="remove_music">Remove music</string>
    <string name="remove_picture">Remove picture</string>
    <string name="remove_slide">Remove slide</string>
    <string name="remove_text">Remove text</string>
    <string name="remove_video">Remove video</string>
    <string name="replace_image">Replace picture</string>
    <string name="resize_image_error_information">This picture is still too large to send even after being resized</string>
    <string name="save">Save to</string>
    <string name="save_ringtone">Save as ringtone</string>
    <string name="saved_label">Saved:</string>
    <string name="saved_ringtone">Ringtone saved</string>
    <string name="saved_ringtone_fail">Couldn\'t save ringtone</string>
    <string name="search">Messaging</string>
    <string name="search_empty"></string>
    <string name="search_hint">Search for SMS</string>
    <string name="type_to_compose_text_or_leave_blank">Type message, or leave blank</string>
    <string name="add_attachments">Add attachment</string>
    <string name="add_nickname_title">Add nickname</string>
    <string name="done_text">Done</string>
    <string name="favorite_page_label">Star</string>
    <string name="lable_sms_center_number">SMS center</string>
    <string name="message_popup_veri_close">Close</string>
    <string name="message_popup_veri_copy">Copy</string>
    <string name="message_popup_veri_tip">Verification code</string>
    <string name="more_item_label">More</string>
    <string name="nickname_dialog_content">While editing group message, according to recipients\' name, generate nickname, then add the nickname to the message.</string>
    <string name="nickname_function_dialog_example">For example, to send message to Sam and Lucy:</string>
    <string name="nickname_function_dialog_example_send_out">The messages that received by Sam and Lucy will be:</string>
    <string name="nickname_function_dialog_example_send_out_content1">Happy new year, Sam!</string>
    <string name="nickname_function_dialog_example_send_out_content2">Happy new year, Lucy!</string>
    <string name="nickname_title">Contact</string>
    <string name="pref_more_title">More</string>
    <string name="pref_summary_edit_quick_reply">Edit messages for quick reply</string>
    <string name="pref_title_default_message_app">Default SMS app</string>
    <string name="pref_title_flyme_message">Web message</string>
    <string name="pref_title_manage_messages_spam">Harassment blocking</string>
    <string name="quick_reply_menu">Quick reply</string>
    <string name="represent_content">Nickname</string>
    <string name="restore_nickname_title">Restore</string>
    <string name="send_type_choose">Choose type of sending</string>
    <string name="spam">Add to blacklist</string>
    <string name="top">Keep on top</string>
    <string name="unfiltrate">Read</string>
</resources>