<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res-auto">
    <item app:icon="@drawable/ic_sb_mark_read_selector" app:id="@id/unfiltrate" app:orderInCategory="1" app:title="@string/unfiltrate" app:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item app:icon="@drawable/ic_sb_top_selector" app:id="@id/top" app:orderInCategory="1" app:title="@string/top" app:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item app:icon="@drawable/ic_sb_filter_selector" app:id="@id/spam" app:visible="false" app:orderInCategory="1" app:title="@string/spam" app:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item app:icon="@drawable/ic_sb_delete_selector" app:id="@id/delete" app:orderInCategory="1" app:title="@string/delete_message" app:showAsAction="always|withText" app:showAsAction="always|withText" />
</menu>
