<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:paddingLeft="26dp" android:paddingRight="26dp" android:layout_width="UNKNOWN_DATA_0x14401" android:layout_height="match_parent">
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textSize="16sp" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/nickname_dialog_content" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textSize="12sp" android:textColor="#b3000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/nickname_function_dialog_example" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textSize="14sp" android:textColor="#000000" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/nickname_function_dialog_example_content_tv" android:background="@drawable/nickname_function_dialog_example_content_bg" android:paddingLeft="45dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="9dp" android:text="@string/nickname_dialog_content" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textSize="12sp" android:textColor="#b3000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/nickname_function_dialog_example_send_out" />
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="9dp" android:layout_marginBottom="25dp">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textSize="14sp" android:textColor="#000000" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@drawable/nickname_function_send_out_message_bg" android:paddingLeft="12dp" android:paddingRight="7dp" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x2301" android:layout_marginRight="8dp" android:text="@string/nickname_function_dialog_example_send_out_content1" android:singleLine="true" android:layout_weight="1.0" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textSize="14sp" android:textColor="#000000" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@drawable/nickname_function_send_out_message_bg" android:paddingLeft="12dp" android:paddingRight="7dp" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x2301" android:text="@string/nickname_function_dialog_example_send_out_content2" android:singleLine="true" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
