<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@id/nickname_header_container" android:background="#f2f2f2" android:paddingLeft="24dp" android:paddingTop="8dp" android:paddingRight="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="35dp">
    <TextView android:textSize="14sp" android:textColor="#80000000" android:id="@id/nickname_header_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/nickname_title" android:layout_weight="1.0" />
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textSize="14sp" android:textColor="#80000000" android:id="@id/represent_content_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:text="@string/represent_content" android:layout_alignParentLeft="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="14sp" android:textColor="@color/restore_nickname_color_selector" android:id="@id/restore_nickname_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/restore_nickname_title" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>
