<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.BasicSlideEditorView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/slide_editor_view" android:paddingTop="@dimen/sum_actionbar_height_statusbar_height" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:background="0x1080018" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp" android:layout_weight="1.0">
                <ImageView android:id="@id/image" android:background="0x1080066" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0" />
                <LinearLayout android:orientation="horizontal" android:id="@id/audio" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_mms_music" />
                    <TextView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/audio_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="11sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/media_size_info" android:background="#88000000" android:paddingLeft="3dp" android:paddingRight="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="vertical" android:id="@id/controler" android:layout_width="wrap_content" android:layout_height="wrap_content"
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp">
                <ImageButton android:id="@id/pre_slide_button" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginRight="4dp" android:src="@drawable/ic_maps_back" style="?unknown_attr_ref: 1010049" />
                <ImageButton android:id="@id/next_slide_button" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="4dp" android:src="@drawable/ic_maps_next" style="?unknown_attr_ref: 1010049" />
            </LinearLayout>
            <Button android:textColor="@color/black" android:id="@id/preview_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" android:text="@string/preview" android:lines="2" style="?unknown_attr_ref: 1010049" />
            <Button android:textColor="@color/black" android:id="@id/replace_image_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" android:text="@string/replace_image" android:lines="2" style="?unknown_attr_ref: 1010049" />
            <Button android:textColor="@color/black" android:id="@id/remove_slide_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/remove_slide" android:lines="2" style="?unknown_attr_ref: 1010049" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:paddingBottom="2dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <EditText android:textSize="15sp" android:id="@id/text_message" android:paddingLeft="5dp" android:paddingTop="5dp" android:paddingRight="5dp" android:paddingBottom="5dp" android:nextFocusRight="@id/done_button" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:hint="@string/type_to_compose_text_or_leave_blank" android:maxLines="1" android:capitalize="sentences" android:autoText="true" android:layout_weight="1.0">
            <requestFocus />
        </EditText>
        <Button android:id="@id/done_button" android:nextFocusLeft="@id/text_message" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_margin="5dp" android:text="@string/done_text" />
    </LinearLayout>
</com.android.mms.ui.BasicSlideEditorView>
