<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:clickable="true" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/msg_popup_tip_height">
    <LinearLayout android:orientation="vertical" android:id="@id/nameMsgFrm" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="@drawable/shape_horizontal_divider" android:mode="twoLine" android:showDividers="middle"
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/msg_popup_veri_from_margin_top" android:paddingBottom="@dimen/msg_popup_veri_btns_margin_top" android:layout_width="match_parent" android:layout_height="wrap_content"
            <LinearLayout android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="match_parent">
                <TextView android:textSize="@dimen/msg_popup_from_text_size" android:textColor="@color/msg_popup_from_text_color" android:ellipsize="end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/from" android:layout_width="wrap_content" android:layout_height="match_parent" android:singleLine="true" android:includeFontPadding="false" />
                <TextView android:textSize="@dimen/msg_popup_from_text_size" android:textColor="@color/msg_popup_from_text_color" android:id="@id/tip" android:paddingLeft="@dimen/msg_popup_veri_from_padding_left" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/message_popup_veri_tip" android:singleLine="true" android:includeFontPadding="false" />
            </LinearLayout>
            <TextView android:textSize="@dimen/msg_popup_veri_msg_text_size" android:textColor="@color/msg_popup_msg_text_color" android:ellipsize="end" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/msgBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/msg_popup_veri_msg_margin_top" android:maxLines="2" android:includeFontPadding="true" android:lineSpacingExtra="@dimen/msg_popup_msg_lineSpacingExtra" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0d03b9" android:divider="@drawable/shape_vertical_divider" android:showDividers="middle">
            <Button android:id="@id/btn_close" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/message_popup_veri_close" android:layout_weight="1.0" style="@style/Widget.Flyme.Light.Button.Borderless.Small.Dialog" />
            <Button android:textColor="@color/message_default_color" android:id="@id/btn_copy" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/message_popup_veri_copy" android:layout_weight="1.0" style="@style/Widget.Flyme.Light.Button.Borderless.Small.Dialog" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
