<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.view.CmaContentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/cmaCotent" android:background="@color/msg_body_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.android.mms.recipient.MessageRecipient android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/recipients_editor_stub" android:paddingLeft="@dimen/cma_recipient_edit_paddingLeft" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sum_actionbar_height_statusbar_height" />
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="vertical" android:id="@id/listview_edit_container" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/recipients_editor_stub">
        <view android:id="@id/history" android:visibility="gone" android:fadingEdge="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:listSelector="@drawable/compose_message_selector" android:drawSelectorOnTop="false" android:stackFromBottom="false" android:transcriptMode="disabled" android:cacheColorHint="0x106000b" android:layout_weight="1.0" class="com.android.mms.ui.MessageListView" />
        <TextView android:textSize="13dp" android:textColor="@color/message_default_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/add_nickname_tv" android:background="@drawable/add_nick_name_selector" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/add_nickname_title" />
        <View android:background="@color/msg_body_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0d0100" />
        <FrameLayout android:id="@id/frmEditSpace" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@id/editSpace" android:background="@drawable/cma_edit_bg_color" android:paddingLeft="?attr/editspace_paddingleft_attr" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/message_body_minHeight">
                <ImageButton android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/left_btn" android:background="0x0" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/cma_left_btn_marginLeft" android:layout_marginRight="@dimen/cma_left_btn_marginRight" android:layout_marginBottom="@dimen/cma_left_btn_marginBottom" android:src="@drawable/ic_sb_attachment_selector" android:contentDescription="@string/add_attachments" />
                <RelativeLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:paddingRight="@dimen/cma_change_slot_ib_container_paddingRight" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <com.android.mms.view.MmsRichContainer android:scrollbarThumbVertical="@drawable/mz_message_scrollbar_handle_vertical" android:scrollbarStyle="outsideOverlay" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/mms_container" android:paddingBottom="@dimen/cma_edit_padding_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:smoothScrollbar="true" />
                    <ImageButton android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/change_slot_ib" android:background="0x0" android:paddingTop="@dimen/cma_change_slot_btn_paddingTop" android:paddingRight="@dimen/cma_change_slot_btn_paddingRight" android:paddingBottom="@dimen/cma_change_slot_btn_paddingBottom" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="?attr/sim_default_input_src_attr" android:layout_alignBottom="@id/mms_container" android:contentDescription="@string/send_type_choose" android:layout_alignEnd="@id/mms_container" />
                </RelativeLayout>
                <ViewStub android:id="@id/right_btn_container_stub" android:layout="?attr/right_btn_view_container_attr" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="0dp" android:layout_marginRight="@dimen/cma_right_btn_container_marginRight" />
            </LinearLayout>
        </FrameLayout>
        <View android:id="@id/cma_bottom_divider" android:background="@color/msg_body_divider" android:visibility="gone" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0d038c" />
    </LinearLayout>
</com.android.mms.view.CmaContentRelativeLayout>
